# notification-service

./: LICENSE  app.dockerfile  docker-compose.yml  pyproject.toml
mailu/: docker-compose.yml  mailu.env
src/: main.py  schemas.py  settings.py  utils.py
